Fixes css overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 $bg: rgb(255, 255, 255);
 $shadow: 10px rgba(0, 0, 0, 0.308);
+$icon-color: rgb(88, 88, 88);
 
 * {
   margin: 0;
@@ -9,14 +10,10 @@ $shadow: 10px rgba(0, 0, 0, 0.308);
 
 .App {
   width: 100%;
-
   background-color: rgb(56, 0, 0);
-  overflow: hi;
 }
 
 #home {
-  width: 100%;
-
   background-color: $bg;
 }
 
@@ -26,13 +23,13 @@ header {
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  padding: 10%;
+  padding: 20px;
   box-shadow: 0px 5px $shadow;
 
   h1 {
     color: white;
     text-transform: uppercase;
-    font-size: 2.3em;
+    font-size: 2em;
   }
 
   .searchbar {
@@ -45,7 +42,8 @@ header {
 
     .mag-glass {
       position: relative;
-      font-size: 1.5em;
+      font-size: 2em;
+      color: $icon-color;
 
       &:hover {
         cursor: pointer;
@@ -56,9 +54,7 @@ header {
       border-radius: 20px;
       font-size: 1.5em;
       padding: 10px 5px;
-      //max-width: 90%;
       border: none;
-      //background-color: red;
     }
   }
 }
@@ -75,6 +71,7 @@ header {
   box-shadow: 0px -5px $shadow;
 
   li {
-    font-size: 2.2em;
+    font-size: 2em;
+    color: $icon-color;
   }
 }
